--- a/src/Resources/Locales/zh_CN.axaml
+++ b/src/Resources/Locales/zh_CN.axaml
@@ -118,6 +118,7 @@
   <x:String x:Key="Text.Configure.User" xml:space="preserve">用户名</x:String>
   <x:String x:Key="Text.Configure.User.Placeholder" xml:space="preserve">应用于本仓库的用户名</x:String>
   <x:String x:Key="Text.Copy" xml:space="preserve">复制</x:String>
+  <x:String x:Key="Text.CopyMessage" xml:space="preserve">复制内容</x:String>
   <x:String x:Key="Text.CopyPath" xml:space="preserve">复制路径</x:String>
   <x:String x:Key="Text.CopyFileName" xml:space="preserve">复制文件名</x:String>
   <x:String x:Key="Text.CreateBranch" xml:space="preserve">新建分支 ...</x:String>
