--- a/src/Views/Squash.axaml
+++ b/src/Views/Squash.axaml
@@ -12,14 +12,14 @@
     <TextBlock FontSize="18"
                Classes="bold"
                Text="{DynamicResource Text.Squash}"/>
-    <Grid Margin="0,16,0,0" RowDefinitions="32,32,32,32,32" ColumnDefinitions="100,*">
+    <Grid Margin="0,16,0,0" RowDefinitions="28,28,120,Auto" ColumnDefinitions="100,*">
       <TextBlock Grid.Row="0" Grid.Column="0"
                  HorizontalAlignment="Right" VerticalAlignment="Center"
                  Margin="0,0,8,0"
                  Text="{DynamicResource Text.Squash.Head}"/>
       <Grid Grid.Row="0" Grid.Column="1" ColumnDefinitions="Auto,Auto,*" Height="20" VerticalAlignment="Center">
         <Path Grid.Column="0" Margin="0,6,8,0" Width="14" Height="14" Fill="{DynamicResource Brush.FG1}" Data="{StaticResource Icons.Commit}"/>
-        <TextBlock Grid.Column="1" Text="{Binding Head.SHA, Converter={x:Static c:StringConverters.ToShortSHA}}" Foreground="DarkOrange"/>
+        <TextBlock Grid.Column="1" Classes="monospace" Text="{Binding Head.SHA, Converter={x:Static c:StringConverters.ToShortSHA}}" Foreground="DarkOrange"/>
         <TextBlock Grid.Column="2" Text="{Binding Head.Subject}" Margin="8,0,0,0" TextTrimming="CharacterEllipsis"/>
       </Grid>
 
@@ -29,21 +29,23 @@
                  Text="{DynamicResource Text.Squash.To}"/>
       <Grid Grid.Row="1" Grid.Column="1" ColumnDefinitions="Auto,Auto,*" Height="20" VerticalAlignment="Center">
         <Path Grid.Column="0" Margin="0,6,8,0" Width="14" Height="14" Fill="{DynamicResource Brush.FG1}" Data="{StaticResource Icons.Commit}"/>
-        <TextBlock Grid.Column="1" Text="{Binding Parent.SHA, Converter={x:Static c:StringConverters.ToShortSHA}}" Foreground="DarkOrange"/>
+        <TextBlock Grid.Column="1" Classes="monospace" Text="{Binding Parent.SHA, Converter={x:Static c:StringConverters.ToShortSHA}}" Foreground="DarkOrange"/>
         <TextBlock Grid.Column="2" Text="{Binding Parent.Subject}" Margin="8,0,0,0" TextTrimming="CharacterEllipsis"/>
       </Grid>
 
       <TextBlock Grid.Row="2" Grid.Column="0"
-                 HorizontalAlignment="Right" VerticalAlignment="Center"
-                 Margin="0,0,8,0"
+                 HorizontalAlignment="Right" VerticalAlignment="Top"
+                 Margin="0,5,8,0"
                  Text="{DynamicResource Text.Squash.Message}"/>
-      <TextBox Grid.Row="2" Grid.RowSpan="3" Grid.Column="1"
-               Margin="0,4,0,0"
-               CornerRadius="2"
-               AcceptsReturn="True"
-               VerticalContentAlignment="Top"
-               Text="{Binding Message, Mode=TwoWay}"
-               v:AutoFocusBehaviour.IsEnabled="True"/>
+      <v:CommitMessageTextBox Grid.Row="2" Grid.Column="1"
+                              Margin="0,4,0,0"
+                              Text="{Binding Message, Mode=TwoWay}"/>
+
+      <TextBlock Grid.Row="3" Grid.Column="1"
+                 Margin="0,4,0,0"
+                 Text="{DynamicResource Text.Reword.Tip}"
+                 TextWrapping="Wrap"
+                 Foreground="{DynamicResource Brush.FG2}"/>
     </Grid>
   </StackPanel>
 </UserControl>
